[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
chrono = "0.4.41"
dotenvy = "0.15.7"
hyper = { version = "1.6.0", features = ["http2", "server"]}
jsonwebtoken = "9.3.1"
serde = "1.0.219"
sqlx = { version = "0.8", features = [ "runtime-tokio", "mysql" ] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
